WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216878
Fix for accessibility/aria-combobox-control-owns-elements.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=216878
Summary
Fix for accessibility/aria-combobox-control-owns-elements.html in isolated tr...
Andres Gonzalez
Reported
2020-09-23 07:03:41 PDT
Fix for accessibility/aria-combobox-control-owns-elements.html in isolated tree mode.
Attachments
Patch
(12.77 KB, patch)
2020-09-23 07:15 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-09-23 07:15:20 PDT
Created
attachment 409472
[details]
Patch
EWS
Comment 2
2020-09-23 08:53:06 PDT
Committed
r267477
: <
https://trac.webkit.org/changeset/267477
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409472
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-23 08:55:12 PDT
<
rdar://problem/69438407
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug